[gd_scene load_steps=4 format=3 uid="uid://dyg40a5hhkqva"]

[ext_resource type="PackedScene" uid="uid://dbfeuchykukj3" path="res://assets/models/court/court.blend" id="2_cwupy"]
[ext_resource type="Script" path="res://src/court.gd" id="5"]

[sub_resource type="BoxShape3D" id="8"]
size = Vector3(10, 1.01273, 0.0807126)

[node name="Court" type="Node3D"]
script = ExtResource("5")

[node name="court" parent="." instance=ExtResource("2_cwupy")]

[node name="Net" type="StaticBody3D" parent="." groups=["Net"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.388625, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Net"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0917587, 0)
shape = SubResource("8")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape2" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.480384, 0)
shape = SubResource("8")

[node name="back_left_service_box" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.17569, 0, -6.36622)

[node name="back_right_service_box" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0652659, 0, -6.36622)

[node name="back_sideline" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -11.877)

[node name="front_left_service_box" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.172, 0, 0)

[node name="front_right_service_box" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0911847, 0, 0)

[node name="front_sideline" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 11.886)
